# xla

./: .gitignore  BUILD.bazel  WORKSPACE  t.sh
_demos/: t0.build.sh
xla/python/: pjit.cc  pmap_lib.cc
